
[package]
name = "aircraft"
version = "0.0.0"
edition = "2018"
authors = ["wyhaya <wyhaya@gmail.com>"]
description = "Simple flying shooting game"
homepage = "https://github.com/wyhaya/aircraft"
repository = "https://github.com/wyhaya/aircraft.git"
license = "MIT"
readme = "README.md"

[profile.dev]
debug = false

[profile.release]
lto = true
codegen-units = 1
# strip = "symbols"

[dev-dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }

[dependencies]
bevy = { version = "0.5.0" }
fastrand = { version = "1.4.0" }
